[tool.poetry]
name = "bewise"
version = "1.6.1"
description = "Test task"
authors = ["Yuri B"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
fastapi = {extras = ["all"], version = "^0.103.2"}
sqlalchemy = "^2.0.21"
pydantic-settings = "^2.0.3"
requests = "^2.31.0"
alembic = "^1.12.0"
pytest = "^7.4.2"
loguru = "^0.7.2"
pytest-asyncio = "^0.21.1"
poetry = "1.6.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-vvv -s"
filterwarnings = ['ignore::DeprecationWarning']
testpaths = [
    "tests_app/unit.py",
    "tests_app/integration.py"
]